// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropZone ATTRIBUTES should customize description text 1`] = `
<DropZone
  infoRender={[Function]}
  onDrop={[MockFunction]}
  onRemove={[MockFunction]}
>
  <Wrapper
    className="dropzone-wrapper"
  >
    <Div
      className="dropzone-wrapper"
    >
      <div
        className="dropzone-wrapper"
      >
        <Div
          className="dropzone-content"
          onBlur={[Function]}
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          shouldRender={true}
          tabIndex={0}
        >
          <div
            className="dropzone-content"
            onBlur={[Function]}
            onClick={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            <input
              autoComplete="off"
              multiple={true}
              onChange={[Function]}
              onClick={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              tabIndex={-1}
              type="file"
            />
            <Span
              className="dropzone-icon"
            >
              <span
                className="dropzone-icon"
              />
            </Span>
            <Div
              className="dropzone-description"
            >
              <div
                className="dropzone-description"
              >
                <Info>
                  <span
                    className="dropzone-description"
                  >
                    Drop here
                  </span>
                </Info>
                <UploadButton>
                  <A>
                    <a
                      onClick={[Function]}
                    >
                       нажмите здесь
                    </a>
                  </A>
                </UploadButton>
                <Tooltip
                  title="Размер: до 104857600 байт."
                >
                  <div
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                  />
                  <I
                    className="dropzone-hint"
                  >
                    <i
                      className="dropzone-hint"
                    />
                  </I>
                  <TooltipBody
                    onTransitionEnd={[Function]}
                    style={
                      Object {
                        "opacity": 0,
                        "top": 0,
                        "visibility": "hidden",
                      }
                    }
                    title="Размер: до 104857600 байт."
                    tooltipClassNames="tooltip"
                  >
                    <Portal
                      containerInfo={
                        <body>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                          <div>
                            <ul>
                              <li>
                                <div
                                  style="display: none;"
                                />
                                <a
                                  class="pointer dropzone-delete-icon-wrapper"
                                >
                                  <i
                                    class="dropzone-delete-icon"
                                  />
                                </a>
                                <div
                                  style="display: none;"
                                />
                                <a
                                  download="file_1.txt"
                                  href="blob://mockObjectURL"
                                  theme="dropzone-file-download internal"
                                >
                                  file_1.txt
                                </a>
                              </li>
                              <li>
                                <div
                                  style="display: none;"
                                />
                                <a
                                  class="pointer dropzone-delete-icon-wrapper"
                                >
                                  <i
                                    class="dropzone-delete-icon"
                                  />
                                </a>
                                <div
                                  style="display: none;"
                                />
                                <a
                                  download="file_2.pdf"
                                  href="blob://mockObjectURL"
                                  theme="dropzone-file-download internal"
                                >
                                  file_2.pdf
                                </a>
                              </li>
                            </ul>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Удалить
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Скачать
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Удалить
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Скачать
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                        </body>
                      }
                    >
                      <div
                        className="tooltip"
                        onTransitionEnd={[Function]}
                        style={
                          Object {
                            "opacity": 0,
                            "top": 0,
                            "visibility": "hidden",
                          }
                        }
                      >
                        <div>
                          Размер: до 104857600 байт.
                        </div>
                      </div>
                    </Portal>
                  </TooltipBody>
                </Tooltip>
              </div>
            </Div>
          </div>
        </Div>
        <LoaderComponent />
      </div>
    </Div>
  </Wrapper>
  <InvalidMessageWrapper>
    <InvalidMessage
      isValid={true}
      messages={Array []}
    >
      <Component
        isValid={true}
        messages={Array []}
      />
    </InvalidMessage>
  </InvalidMessageWrapper>
  <RejectedFiles
    className="rejected-list margin-none"
  >
    <Ul
      className="rejected-list margin-none"
    >
      <ul
        className="rejected-list margin-none"
      >
        <Component
          theme={
            Object {
              "content": "dropzone-content",
              "description": "dropzone-description",
              "disabled": "disabled",
              "fileDeleteIcon": "dropzone-delete-icon",
              "fileDeleteIconWrapper": "dropzone-delete-icon-wrapper",
              "fileDeleteLink": "dropzone-file-delete internal",
              "fileDownloadLink": "dropzone-file-download internal",
              "hint": "dropzone-hint",
              "invalid": "danger",
              "rejectedFilesWrapper": "rejected-list margin-none",
              "rejectedMessage": "dropzone-rejected-message txt-danger",
              "required": "required",
              "status": "dropzone-status",
              "uploadIcon": "dropzone-icon",
              "wrapper": "dropzone-wrapper",
            }
          }
          value={
            Object {
              "acceptedFiles": Array [],
              "rejectedFiles": Array [],
            }
          }
        />
      </ul>
    </Ul>
  </RejectedFiles>
  <AcceptedFiles
    onChange={[Function]}
  >
    <AcceptedFiles
      onChange={[Function]}
    >
      <Component
        files={Array []}
        onChange={[Function]}
        shouldRender={false}
        theme={
          Object {
            "content": "dropzone-content",
            "description": "dropzone-description",
            "disabled": "disabled",
            "fileDeleteIcon": "dropzone-delete-icon",
            "fileDeleteIconWrapper": "dropzone-delete-icon-wrapper",
            "fileDeleteLink": "dropzone-file-delete internal",
            "fileDownloadLink": "dropzone-file-download internal",
            "hint": "dropzone-hint",
            "invalid": "danger",
            "rejectedFilesWrapper": "rejected-list margin-none",
            "rejectedMessage": "dropzone-rejected-message txt-danger",
            "required": "required",
            "status": "dropzone-status",
            "uploadIcon": "dropzone-icon",
            "wrapper": "dropzone-wrapper",
          }
        }
        value={
          Object {
            "acceptedFiles": Array [],
            "rejectedFiles": Array [],
          }
        }
      />
    </AcceptedFiles>
  </AcceptedFiles>
</DropZone>
`;

exports[`DropZone ATTRIBUTES should customize upload button 1`] = `
<DropZone
  onDrop={[MockFunction]}
  onRemove={[MockFunction]}
  uploadButtonRender={[Function]}
>
  <Wrapper
    className="dropzone-wrapper"
  >
    <Div
      className="dropzone-wrapper"
    >
      <div
        className="dropzone-wrapper"
      >
        <Div
          className="dropzone-content"
          onBlur={[Function]}
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          shouldRender={true}
          tabIndex={0}
        >
          <div
            className="dropzone-content"
            onBlur={[Function]}
            onClick={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            <input
              autoComplete="off"
              multiple={true}
              onChange={[Function]}
              onClick={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              tabIndex={-1}
              type="file"
            />
            <Span
              className="dropzone-icon"
            >
              <span
                className="dropzone-icon"
              />
            </Span>
            <Div
              className="dropzone-description"
            >
              <div
                className="dropzone-description"
              >
                <Info>
                  <Div>
                    <div>
                      Перетащите файлы или
                    </div>
                  </Div>
                </Info>
                <UploadButton>
                  <span
                    className="test-class"
                  >
                    Drop me
                  </span>
                </UploadButton>
                <Tooltip
                  title="Размер: до 104857600 байт."
                >
                  <div
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                  />
                  <I
                    className="dropzone-hint"
                  >
                    <i
                      className="dropzone-hint"
                    />
                  </I>
                  <TooltipBody
                    onTransitionEnd={[Function]}
                    style={
                      Object {
                        "opacity": 0,
                        "top": 0,
                        "visibility": "hidden",
                      }
                    }
                    title="Размер: до 104857600 байт."
                    tooltipClassNames="tooltip"
                  >
                    <Portal
                      containerInfo={
                        <body>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                          <div>
                            <ul>
                              <li>
                                <div
                                  style="display: none;"
                                />
                                <a
                                  class="pointer dropzone-delete-icon-wrapper"
                                >
                                  <i
                                    class="dropzone-delete-icon"
                                  />
                                </a>
                                <div
                                  style="display: none;"
                                />
                                <a
                                  download="file_1.txt"
                                  href="blob://mockObjectURL"
                                  theme="dropzone-file-download internal"
                                >
                                  file_1.txt
                                </a>
                              </li>
                              <li>
                                <div
                                  style="display: none;"
                                />
                                <a
                                  class="pointer dropzone-delete-icon-wrapper"
                                >
                                  <i
                                    class="dropzone-delete-icon"
                                  />
                                </a>
                                <div
                                  style="display: none;"
                                />
                                <a
                                  download="file_2.pdf"
                                  href="blob://mockObjectURL"
                                  theme="dropzone-file-download internal"
                                >
                                  file_2.pdf
                                </a>
                              </li>
                            </ul>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Удалить
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Скачать
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Удалить
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Скачать
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                        </body>
                      }
                    >
                      <div
                        className="tooltip"
                        onTransitionEnd={[Function]}
                        style={
                          Object {
                            "opacity": 0,
                            "top": 0,
                            "visibility": "hidden",
                          }
                        }
                      >
                        <div>
                          Размер: до 104857600 байт.
                        </div>
                      </div>
                    </Portal>
                  </TooltipBody>
                </Tooltip>
              </div>
            </Div>
          </div>
        </Div>
        <LoaderComponent />
      </div>
    </Div>
  </Wrapper>
  <InvalidMessageWrapper>
    <InvalidMessage
      isValid={true}
      messages={Array []}
    >
      <Component
        isValid={true}
        messages={Array []}
      />
    </InvalidMessage>
  </InvalidMessageWrapper>
  <RejectedFiles
    className="rejected-list margin-none"
  >
    <Ul
      className="rejected-list margin-none"
    >
      <ul
        className="rejected-list margin-none"
      >
        <Component
          theme={
            Object {
              "content": "dropzone-content",
              "description": "dropzone-description",
              "disabled": "disabled",
              "fileDeleteIcon": "dropzone-delete-icon",
              "fileDeleteIconWrapper": "dropzone-delete-icon-wrapper",
              "fileDeleteLink": "dropzone-file-delete internal",
              "fileDownloadLink": "dropzone-file-download internal",
              "hint": "dropzone-hint",
              "invalid": "danger",
              "rejectedFilesWrapper": "rejected-list margin-none",
              "rejectedMessage": "dropzone-rejected-message txt-danger",
              "required": "required",
              "status": "dropzone-status",
              "uploadIcon": "dropzone-icon",
              "wrapper": "dropzone-wrapper",
            }
          }
          value={
            Object {
              "acceptedFiles": Array [],
              "rejectedFiles": Array [],
            }
          }
        />
      </ul>
    </Ul>
  </RejectedFiles>
  <AcceptedFiles
    onChange={[Function]}
  >
    <AcceptedFiles
      onChange={[Function]}
    >
      <Component
        files={Array []}
        onChange={[Function]}
        shouldRender={false}
        theme={
          Object {
            "content": "dropzone-content",
            "description": "dropzone-description",
            "disabled": "disabled",
            "fileDeleteIcon": "dropzone-delete-icon",
            "fileDeleteIconWrapper": "dropzone-delete-icon-wrapper",
            "fileDeleteLink": "dropzone-file-delete internal",
            "fileDownloadLink": "dropzone-file-download internal",
            "hint": "dropzone-hint",
            "invalid": "danger",
            "rejectedFilesWrapper": "rejected-list margin-none",
            "rejectedMessage": "dropzone-rejected-message txt-danger",
            "required": "required",
            "status": "dropzone-status",
            "uploadIcon": "dropzone-icon",
            "wrapper": "dropzone-wrapper",
          }
        }
        value={
          Object {
            "acceptedFiles": Array [],
            "rejectedFiles": Array [],
          }
        }
      />
    </AcceptedFiles>
  </AcceptedFiles>
</DropZone>
`;

exports[`DropZone SNAPSHOTS should render 1`] = `
<DropZone
  onDrop={[MockFunction]}
  onRemove={[MockFunction]}
>
  <Wrapper
    className="dropzone-wrapper"
  >
    <Div
      className="dropzone-wrapper"
    >
      <div
        className="dropzone-wrapper"
      >
        <Div
          className="dropzone-content"
          onBlur={[Function]}
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDrop={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          shouldRender={true}
          tabIndex={0}
        >
          <div
            className="dropzone-content"
            onBlur={[Function]}
            onClick={[Function]}
            onDragEnter={[Function]}
            onDragLeave={[Function]}
            onDragOver={[Function]}
            onDrop={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            tabIndex={0}
          >
            <input
              autoComplete="off"
              multiple={true}
              onChange={[Function]}
              onClick={[Function]}
              style={
                Object {
                  "display": "none",
                }
              }
              tabIndex={-1}
              type="file"
            />
            <Span
              className="dropzone-icon"
            >
              <span
                className="dropzone-icon"
              />
            </Span>
            <Div
              className="dropzone-description"
            >
              <div
                className="dropzone-description"
              >
                <Info>
                  <Div>
                    <div>
                      Перетащите файлы или
                    </div>
                  </Div>
                </Info>
                <UploadButton>
                  <A>
                    <a
                      onClick={[Function]}
                    >
                       нажмите здесь
                    </a>
                  </A>
                </UploadButton>
                <Tooltip
                  title="Размер: до 104857600 байт."
                >
                  <div
                    style={
                      Object {
                        "display": "none",
                      }
                    }
                  />
                  <I
                    className="dropzone-hint"
                  >
                    <i
                      className="dropzone-hint"
                    />
                  </I>
                  <TooltipBody
                    onTransitionEnd={[Function]}
                    style={
                      Object {
                        "opacity": 0,
                        "top": 0,
                        "visibility": "hidden",
                      }
                    }
                    title="Размер: до 104857600 байт."
                    tooltipClassNames="tooltip"
                  >
                    <Portal
                      containerInfo={
                        <body>
                          <div
                            class="tooltip"
                            style="opacity: 0; top: 0px; visibility: hidden;"
                          >
                            <div>
                              Размер: до 104857600 байт.
                            </div>
                          </div>
                        </body>
                      }
                    >
                      <div
                        className="tooltip"
                        onTransitionEnd={[Function]}
                        style={
                          Object {
                            "opacity": 0,
                            "top": 0,
                            "visibility": "hidden",
                          }
                        }
                      >
                        <div>
                          Размер: до 104857600 байт.
                        </div>
                      </div>
                    </Portal>
                  </TooltipBody>
                </Tooltip>
              </div>
            </Div>
          </div>
        </Div>
        <LoaderComponent />
      </div>
    </Div>
  </Wrapper>
  <InvalidMessageWrapper>
    <InvalidMessage
      isValid={true}
      messages={Array []}
    >
      <Component
        isValid={true}
        messages={Array []}
      />
    </InvalidMessage>
  </InvalidMessageWrapper>
  <RejectedFiles
    className="rejected-list margin-none"
  >
    <Ul
      className="rejected-list margin-none"
    >
      <ul
        className="rejected-list margin-none"
      >
        <Component
          theme={
            Object {
              "content": "dropzone-content",
              "description": "dropzone-description",
              "disabled": "disabled",
              "fileDeleteIcon": "dropzone-delete-icon",
              "fileDeleteIconWrapper": "dropzone-delete-icon-wrapper",
              "fileDeleteLink": "dropzone-file-delete internal",
              "fileDownloadLink": "dropzone-file-download internal",
              "hint": "dropzone-hint",
              "invalid": "danger",
              "rejectedFilesWrapper": "rejected-list margin-none",
              "rejectedMessage": "dropzone-rejected-message txt-danger",
              "required": "required",
              "status": "dropzone-status",
              "uploadIcon": "dropzone-icon",
              "wrapper": "dropzone-wrapper",
            }
          }
          value={
            Object {
              "acceptedFiles": Array [],
              "rejectedFiles": Array [],
            }
          }
        />
      </ul>
    </Ul>
  </RejectedFiles>
  <AcceptedFiles
    onChange={[Function]}
  >
    <AcceptedFiles
      onChange={[Function]}
    >
      <Component
        files={Array []}
        onChange={[Function]}
        shouldRender={false}
        theme={
          Object {
            "content": "dropzone-content",
            "description": "dropzone-description",
            "disabled": "disabled",
            "fileDeleteIcon": "dropzone-delete-icon",
            "fileDeleteIconWrapper": "dropzone-delete-icon-wrapper",
            "fileDeleteLink": "dropzone-file-delete internal",
            "fileDownloadLink": "dropzone-file-download internal",
            "hint": "dropzone-hint",
            "invalid": "danger",
            "rejectedFilesWrapper": "rejected-list margin-none",
            "rejectedMessage": "dropzone-rejected-message txt-danger",
            "required": "required",
            "status": "dropzone-status",
            "uploadIcon": "dropzone-icon",
            "wrapper": "dropzone-wrapper",
          }
        }
        value={
          Object {
            "acceptedFiles": Array [],
            "rejectedFiles": Array [],
          }
        }
      />
    </AcceptedFiles>
  </AcceptedFiles>
</DropZone>
`;

exports[`DropZone SNAPSHOTS should render file list 1`] = `
<div>
  <div
    class="dropzone-wrapper"
  >
    <div
      class="dropzone-content"
      tabindex="0"
    >
      <input
        autocomplete="off"
        multiple=""
        style="display: none;"
        tabindex="-1"
        type="file"
      />
      <span
        class="dropzone-icon"
      />
      <div
        class="dropzone-description"
      >
        <div>
          Перетащите файлы или
        </div>
        <a>
           нажмите здесь
        </a>
        <div
          style="display: none;"
        />
        <i
          class="dropzone-hint"
        />
      </div>
    </div>
  </div>
  <ul
    class="rejected-list margin-none"
  >
    <li>
      <span
        class="dropzone-rejected-message txt-danger"
      >
        'rejected_file.txt': - Превышен максимальный размер файла
      </span>
    </li>
  </ul>
  <ul>
    <li>
      <div
        style="display: none;"
      />
      <a
        class="pointer dropzone-delete-icon-wrapper"
      >
        <i
          class="dropzone-delete-icon"
        />
      </a>
      <div
        style="display: none;"
      />
      <a
        download="file_1.txt"
        href="blob://mockObjectURL"
        theme="dropzone-file-download internal"
      >
        file_1.txt
      </a>
    </li>
    <li>
      <div
        style="display: none;"
      />
      <a
        class="pointer dropzone-delete-icon-wrapper"
      >
        <i
          class="dropzone-delete-icon"
        />
      </a>
      <div
        style="display: none;"
      />
      <a
        download="file_2.pdf"
        href="blob://mockObjectURL"
        theme="dropzone-file-download internal"
      >
        file_2.pdf
      </a>
    </li>
    <li>
      <div
        style="display: none;"
      />
      <a
        class="pointer dropzone-delete-icon-wrapper"
      >
        <i
          class="dropzone-delete-icon"
        />
      </a>
      <div
        style="display: none;"
      />
      <a
        download="file_3.txt"
        href="http://example.com/file.txt"
        theme="dropzone-file-download internal"
      >
        file_3.txt
      </a>
    </li>
  </ul>
</div>
`;
